--- a/index.html
+++ b/index.html
@@ -2,31 +2,20 @@
 <html>
 	<head>
 		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 		<title>思学行</title>
+
 		<link rel="stylesheet" href="css/bootstrap.css">
-		<link rel="stylesheet" href="css/swiper.css">
+		<link rel="stylesheet" href="css/swiper.min.css">
 		<link rel="stylesheet" type="text/css" href="css/init.css"/>
-		<script type="text/javascript" src="js/utils/zepto1-2.min.js"></script>
+		<link rel="stylesheet" href="css/header.css">
+		<script src="js/utils/jquery.1.9.min.js" type="text/javascript" charset="utf-8"></script>
+		<script src="js/utils/swiper.min.js" type="text/javascript" charset="utf-8"></script>
+		<script src="js/utils/pm.min.js" type="text/javascript" charset="utf-8"></script>
 	</head>
 	<body>
 		<div className='header-container'>
-			<div className="header-position">
-				<div className="header-top">
-					<img src="../images/logo.png" alt=""/>
-				</div>
-				<div className="header-nav">
-					<div className="nav-left">热门课程</div>
-					<ul className="nav-right">
-						<li>首页<span></span></li>
-						<li>核心优势<span></span></li>
-						<li>授课导师<span></span></li>
-						<li>思学行动态<span></span></li>
-						<li>资料下载<span></span></li>
-						<li>联系我们<span></span></li>
-						<li>关于我们<span></span></li>
-					</ul>
-				</div>
-			</div>
+			fdgsd
 		</div>
 	</body>
 </html>
