--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 		<link rel="stylesheet" href="css/bootstrap.css">
 		<link rel="stylesheet" href="css/swiper.min.css">
 		<link rel="stylesheet" type="text/css" href="css/init.css"/>
-		<link rel="stylesheet" href="css/header.css">
+		<link rel="stylesheet" type="text/css" href="css/header.css">
 		<script src="js/utils/jquery.1.9.min.js" type="text/javascript" charset="utf-8"></script>
 		<script src="js/utils/swiper.min.js" type="text/javascript" charset="utf-8"></script>
 		<script src="js/utils/pm.min.js" type="text/javascript" charset="utf-8"></script>
 	</head>
 	<body>
-		<div className='header-container'>
+		<div class='header-container'>
 			fdgsd
 		</div>
 	</body>
