--- a/pages/aboutUs.html
+++ b/pages/aboutUs.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../css/bootstrap.css">
     <link rel="stylesheet" href="../css/swiper.min.css">
     <link rel="stylesheet" type="text/css" href="../css/init.css"/>
-    <link rel="stylesheet" href="../css/header.css">
+    <link rel="stylesheet" href="../css/common.css">
     <link rel="stylesheet" href="../css/about/about.css">
     <script src="../js/utils/jquery.1.9.min.js" type="text/javascript" charset="utf-8"></script>
     <script src="../js/utils/swiper.min.js" type="text/javascript" charset="utf-8"></script>
@@ -69,7 +69,7 @@
 			<div class="text" style="margin-bottom: 0.2rem;">企业QQ：2507819723</div>
 			<span>服务热线</span>
 			<i>400-000-0000</i>
-			<div class="text">企业QQ：2507819723</div>
+			<div class="text">咨询时间：09：00-18：00</div>
 		</div>
 		<div class="box">
 			<span>关注公众号</span>
