--- a/pages/core.html
+++ b/pages/core.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../css/bootstrap.css">
     <link rel="stylesheet" href="../css/swiper.min.css">
     <link rel="stylesheet" type="text/css" href="../css/init.css"/>
-    <link rel="stylesheet" href="../css/header.css">
+    <link rel="stylesheet" href="../css/common.css">
     <link rel="stylesheet" href="../css/core/core.css">
     <script src="../js/utils/jquery.1.9.min.js" type="text/javascript" charset="utf-8"></script>
     <script src="../js/utils/swiper.min.js" type="text/javascript" charset="utf-8"></script>
