--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<link rel="stylesheet" href="css/swiper.min.css">
 		<link rel="stylesheet" type="text/css" href="css/init.css" />
 		<link rel="stylesheet" type="text/css" href="css/common.css">
+		<link rel="stylesheet" type="text/css" href="css/home/home.css"/>
 		<script src="js/utils/jquery.1.9.min.js" type="text/javascript" charset="utf-8"></script>
 		<script src="js/utils/swiper.min.js" type="text/javascript" charset="utf-8"></script>
 		<script src="js/utils/pm.min.js" type="text/javascript" charset="utf-8"></script>
