--- a/index.html
+++ b/index.html
@@ -13,13 +13,23 @@
 		<script src="js/utils/jquery.1.9.min.js" type="text/javascript" charset="utf-8"></script>
 		<script src="js/utils/swiper.min.js" type="text/javascript" charset="utf-8"></script>
 		<script src="js/utils/pm.min.js" type="text/javascript" charset="utf-8"></script>
+		<script src="js/common.js" type="text/javascript" charset="utf-8"></script>
 	</head>
-	<body>
+	<body  style="visibility: hidden">
 		<div class='header-container'>
 			<div class="header-logo">
 				<img class="logo" src="images/logo.png" alt="">
 				<img class="header-text" src="images/headertext.png" alt="">
 				<img class="menu-btn" src="images/menubtn.png" alt="">
+				<ul class="menu-container">
+					<li><a href="index.html">首页<span>></span></a></li>
+					<li><a href="pages/hot.html">热门课程<span>></span></a></li>
+					<li><a href="pages/core.html">核心优势<span>></span></a></li>
+					<li><a href="">授课导师<span>></span></a></li>
+					<li><a href="">思学行动态<span>></span></a></li>
+					<li><a href="">人才招聘<span>></span></a></li>
+					<li><a href="pages/aboutUs.html">关于我们<span>></span></a></li>
+				</ul>
 			</div>
 			<div class="swiper-container header-swiper">
 				<div class="swiper-wrapper">
@@ -82,6 +92,7 @@
 			<div id="item3" class="publicBox">
 				<div class="title" style="width: 3.2rem;"><i></i>0 元 免 费 课 程<i></i></div>
 				<div class="text">知识共享，做真正实用的公开课</div>
+				<a class="more-btn" href="pages/courseList.html">查看更多></a>
 				<div class="item3-content">
 					<div class="list-box">
 						<img src="images/home/1.png" alt="">
