--- a/pages/aboutUs.html
+++ b/pages/aboutUs.html
@@ -14,6 +14,7 @@
     <script src="../js/utils/swiper.min.js" type="text/javascript" charset="utf-8"></script>
     <script src="../js/utils/pm.min.js" type="text/javascript" charset="utf-8"></script>
     <script type="text/javascript" src="http://api.map.baidu.com/api?v=3.0&ak=WbnfbT34Bb2Ydp2BtIz0YCvsGNmU7OCv"></script>
+	<script src="../js/common.js" type="text/javascript" charset="utf-8"></script>
 </head>
 <body>
 	<div class='header-container'>
@@ -21,6 +22,15 @@
 			<img class="logo" src="../images/logo.png" alt="">
 			<img class="header-text" src="../images/headertext.png" alt="">
 			<img class="menu-btn" src="../images/menubtn.png" alt="">
+			<ul class="menu-container">
+				<li><a href="../index.html">首页<span>></span></a></li>
+				<li><a href="../pages/hot.html">热门课程<span>></span></a></li>
+				<li><a href="../pages/core.html">核心优势<span>></span></a></li>
+				<li><a href="">授课导师<span>></span></a></li>
+				<li><a href="">思学行动态<span>></span></a></li>
+				<li><a href="">人才招聘<span>></span></a></li>
+				<li><a href="../pages/aboutUs.html">关于我们<span>></span></a></li>
+			</ul>
 		</div>
 		<div class="swiper-container">
 			<div class="swiper-wrapper">
