--- a/pages/core.html
+++ b/pages/core.html
@@ -26,7 +26,7 @@
             <li><a href="../pages/hot.html">热门课程<span>></span></a></li>
             <li><a href="../pages/core.html">核心优势<span>></span></a></li>
             <li><a href="">授课导师<span>></span></a></li>
-            <li><a href="">思学行动态<span>></span></a></li>
+            <li><a href="../pages/news.html">思学行动态<span>></span></a></li>
             <li><a href="">人才招聘<span>></span></a></li>
             <li><a href="../pages/aboutUs.html">关于我们<span>></span></a></li>
         </ul>
