--- a/pages/server.html
+++ b/pages/server.html
@@ -6,18 +6,17 @@
     <title>思学行</title>
     <link rel="shortcut icon" href="../favicon.ico"/>
     <link rel="bookmark" href="../favicon.ico"/>
-    <!--<link rel="stylesheet" href="../css/bootstrap.css">-->
+    <link rel="stylesheet" href="../css/bootstrap.css">
     <link rel="stylesheet" href="../css/swiper.min.css">
     <link rel="stylesheet" type="text/css" href="../css/init.css"/>
     <link rel="stylesheet" href="../css/common.css">
-    <link rel="stylesheet" href="../css/hot/hot.css">
+    <link rel="stylesheet" href="../css/server/server.css">
     <script src="../js/utils/jquery.1.9.min.js" type="text/javascript" charset="utf-8"></script>
     <script src="../js/utils/swiper.min.js" type="text/javascript" charset="utf-8"></script>
     <script src="../js/utils/pm.min.js" type="text/javascript" charset="utf-8"></script>
     <script src="../js/common.js" type="text/javascript" charset="utf-8"></script>
 </head>
 <body>
-<!--页头-->
 <div class='header-container'>
     <div class="header-logo">
         <img class="logo" src="../images/logo.png" alt="">
@@ -33,81 +32,13 @@
             <li><a href="../pages/aboutUs.html">关于我们<span>></span></a></li>
         </ul>
     </div>
-    <div class="swiper-container">
-        <div class="swiper-wrapper">
-            <div class="swiper-slide">slider1</div>
-            <div class="swiper-slide">slider2</div>
-            <div class="swiper-slide">slider3</div>
-        </div>
-        <div class="swiper-pagination swiper-pagination-bullets" ></div>
+    <div class="banner-container">
+        <img src="../images/banner1.png" alt="">
     </div>
 </div>
+<div class="server-container">
 
-<!--内容-->
-<div class="hot">
-    <div class="title">
-        热门课程
-    </div>
-    <div class="pic">
-        <div class="box">
-            <img src="../images/hot/img1.png" alt="" class="img1">
-            <div class="content">区块链工程师</div>
-        </div>
-        <div class="box">
-            <img src="../images/hot/img2.png" alt="" class="img1">
-            <div class="content">云计算</div>
-        </div>
-        <div class="box">
-            <img src="../images/hot/img3.png" alt="" class="img1">
-            <div class="content">Python</div>
-        </div>
-    </div>
-    <div class="pic">
-        <div class="box">
-            <img src="../images/hot/img4.png" alt="" class="img1">
-            <div class="content">Javascript ES6</div>
-        </div>
-        <div class="box">
-            <img src="../images/hot/img5.png" alt="" class="img1">
-            <div class="content">C++</div>
-        </div>
-        <div class="box">
-            <img src="../images/hot/img6.png" alt="" class="img1">
-            <div class="content">GO语言</div>
-        </div>
-    </div>
-    <div class="pic">
-        <div class="box">
-            <img src="../images/hot/img7.png" alt="" class="img1">
-            <div class="content">新一代网络安全</div>
-        </div>
-        <div class="box">
-            <img src="../images/hot/img8.png" alt="" class="img1">
-            <div class="content">大数据</div>
-        </div>
-        <div class="box">
-            <img src="../images/hot/img9.png" alt="" class="img1">
-            <div class="content">Swift程序设计</div>
-        </div>
-    </div>
-    <div class="pic">
-        <div class="box">
-            <img src="../images/hot/img10.png" alt="" class="img1">
-            <div class="content">智能物联网</div>
-        </div>
-        <div class="box">
-            <img src="../images/hot/img11.png" alt="" class="img1">
-            <div class="content">全栈软件测试</div>
-        </div>
-        <div class="box">
-            <img src="../images/hot/img12.png" alt="" class="img1">
-            <div class="content">AI人工智能</div>
-        </div>
-    </div>
-    <div class="blank"></div>
 </div>
-
-<!--页尾-->
 <div class="footer-container">
     <div class="box">
         <span>联系我们</span>
@@ -142,12 +73,5 @@
         <div class="text">咨询热线</div>
     </div>
 </div>
-<script type="text/javascript">
-    var mySwiper = new Swiper('.swiper-container', {
-        autoplay: 3000, //可选选项，自动滑动
-        pagination: '.swiper-pagination',
-        paginationType: 'bullets',
-    })
-</script>
 </body>
 </html>
