--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 					<li><a href="index.html">首页<span>></span></a></li>
 					<li><a href="pages/hot.html">热门课程<span>></span></a></li>
 					<li><a href="pages/core.html">核心优势<span>></span></a></li>
-					<li><a href="">授课导师<span>></span></a></li>
+					<li><a href="pages/teaching.html">授课导师<span>></span></a></li>
 					<li><a href="pages/news.html">思学行动态<span>></span></a></li>
 					<li><a href="pages/invite.html">人才招聘<span>></span></a></li>
 					<li><a href="pages/aboutUs.html">关于我们<span>></span></a></li>
@@ -43,28 +43,28 @@
 		</div>
 		<div class="home-container">
 			<div id="item1">
-				<div class="list">
+				<a class="list" href="pages/server.html">
 					<img src="images/server/self.png" alt="">
 					<div class="box">
 						<span>个人</span>
 						<div class="text">人才培养</div>
 					</div>
-				</div>
-				<div class="list">
+				</a>
+				<a class="list" href="pages/server.html">
 					<img src="images/server/university.png" alt="">
 					<div class="box">
 						<span>高校</span>
 						<div class="text">技术赋能</div>
 					</div>
 					
-				</div>
-				<div class="list">
+				</a>
+				<a class="list" href="pages/server.html">
 					<img src="images/server/enterprise.png" alt="">
 					<div class="box">
 						<span>政企</span>
 						<div class="text">产业研发</div>
 					</div>
-				</div>
+				</a>
 			</div>
 			<div id="item2" class="publicBox">
 				<div class="title" style="width: 2.5rem;"><i></i>热 门 课 程<i></i></div>
