--- a/pages/server.html
+++ b/pages/server.html
@@ -37,7 +37,30 @@
     </div>
 </div>
 <div class="server-container">
-
+    <div class="title">服务对象</div>
+    <div class="desc">多种服务方式，提供优质的教育</div>
+    <div class="content-box">
+        <img src="../images/server/self-img.png" alt="">
+        <div class="description"></div>
+        <ul class="list-box">
+            <li>
+                <img src="" alt="">
+                <div class="text">名师原创课程  由顶尖高校教师根据最新技术课程研发，紧跟时代，快速迭代</div>
+            </li>
+            <li>
+                <img src="" alt="">
+                <div class="text">名师原创课程  由顶尖高校教师根据最新技术课程研发，紧跟时代，快速迭代</div>
+            </li>
+            <li>
+                <img src="" alt="">
+                <div class="text">名师原创课程  由顶尖高校教师根据最新技术课程研发，紧跟时代，快速迭代</div>
+            </li>
+            <li>
+                <img src="" alt="">
+                <div class="text">名师原创课程  由顶尖高校教师根据最新技术课程研发，紧跟时代，快速迭代</div>
+            </li>
+        </ul>
+    </div>
 </div>
 <div class="footer-container">
     <div class="box">
