--- a/pages/hot.html
+++ b/pages/hot.html
@@ -49,10 +49,10 @@
         热门课程
     </div>
     <div class="pic">
-        <div class="box">
+        <a class="box" href="blockchain.html">
             <img src="../images/hot/img1.png" alt="" class="img1">
             <div class="content">区块链工程师</div>
-        </div>
+        </a>
         <div class="box">
             <img src="../images/hot/img2.png" alt="" class="img1">
             <div class="content">云计算</div>
