--- a/pages/news.html
+++ b/pages/news.html
@@ -47,36 +47,44 @@
     <div class="news-content">
         <ul class="newsBox">
             <li>
-                <img src="" alt="">
-                <div class="content">
-                    <div class="title">第三期 成都区块链企业沙龙成功举办</div>
-                    <div class="desc">10月19日下午，第二期成都区块链企业沙龙在天府软件园举行。本期活动由成都市大数据......</div>
-                    <div class="time">2018-11-8</div>
-                </div>
+                <a href="newsDetail.html">
+                    <img src="" alt="">
+                    <div class="content">
+                        <div class="title">第三期 成都区块链企业沙龙成功举办</div>
+                        <div class="desc">10月19日下午，第二期成都区块链企业沙龙在天府软件园举行。本期活动由成都市大数据......</div>
+                        <div class="time">2018-11-8</div>
+                    </div>
+                </a>
             </li>
             <li>
-                <img src="" alt="">
-                <div class="content">
-                    <div class="title">“区块链的发展与合作”成都区块链企 业沙龙第二期成功举办"</div>
-                    <div class="desc">11月8日下午，第三期成都区块链企业沙龙在银泰in99梦想加举行。本期沙龙由成都市大数据协.....</div>
-                    <div class="time">2018-11-8</div>
-                </div>
+                <a href="newsDetail.html">
+                    <img src="" alt="">
+                    <div class="content">
+                        <div class="title">“区块链的发展与合作”成都区块链企 业沙龙第二期成功举办"</div>
+                        <div class="desc">11月8日下午，第三期成都区块链企业沙龙在银泰in99梦想加举行。本期沙龙由成都市大数据协.....</div>
+                        <div class="time">2018-11-8</div>
+                    </div>
+                </a>
             </li>
             <li>
-                <img src="" alt="">
-                <div class="content">
-                    <div class="title">第三期 成都区块链企业沙龙成功举办</div>
-                    <div class="desc">10月19日下午，第二期成都区块链企业沙龙在天府软件园举行。本期活动由成都市大数据......</div>
-                    <div class="time">2018-11-8</div>
-                </div>
+                <a href="newsDetail.html">
+                    <img src="" alt="">
+                    <div class="content">
+                        <div class="title">第三期 成都区块链企业沙龙成功举办</div>
+                        <div class="desc">10月19日下午，第二期成都区块链企业沙龙在天府软件园举行。本期活动由成都市大数据......</div>
+                        <div class="time">2018-11-8</div>
+                    </div>
+                </a>
             </li>
             <li>
-                <img src="" alt="">
-                <div class="content">
-                    <div class="title">“区块链的发展与合作”成都区块链企 业沙龙第二期成功举办"</div>
-                    <div class="desc">11月8日下午，第三期成都区块链企业沙龙在银泰in99梦想加举行。本期沙龙由成都市大数据协.....</div>
-                    <div class="time">2018-11-8</div>
-                </div>
+                <a href="newsDetail.html">
+                    <img src="" alt="">
+                    <div class="content">
+                        <div class="title">“区块链的发展与合作”成都区块链企 业沙龙第二期成功举办"</div>
+                        <div class="desc">11月8日下午，第三期成都区块链企业沙龙在银泰in99梦想加举行。本期沙龙由成都市大数据协.....</div>
+                        <div class="time">2018-11-8</div>
+                    </div>
+                </a>
             </li>
         </ul>
         <ul class="newsBox">
